Changes to Version 2.1-3

  o Updated Polish translation (thanks to Lukasz Daniel).

  o Fixed random-data-generation dialogs so that code works in R Markdown file.

Changes to Version 2.1-2

  o Fixed ignoring of Rcmdr option "ask.on.exit" and "ask.to.exit", causing exiting without asking in non-English locales (bug report by Yoshinobu Kanda).

  o Small bug fixes/improvements.

Changes to Version 2.1-1

  o Updated Chinese translation (thanks to Tsungwu Ho); Japanese translation (thanks to Takaharu Araki); and Korean translation (thanks to Jong-Hwa Shin).

  o New cross-platform Rcmdr data editor.

  o Fixed inadvertently reverted histogram dialog (following report by Mark Dunning).

Changes to Version 2.1-0

  o Improved R-code generated by many dialogs (mostly implemented by Kosar Karimi-Pour).

  o Added effect-plots dialog (was invoked directly from Model > Graphs menu).

  o Check for functioning Java on 64-bit Windows to load import-from-Excel menu item (issue reported by Kosar Karimi-Pour).

  o Added option to set ttk theme; included in Tools > Options menu item.

  o More careful loading of packages and their dependencies, now placed near the end of the search path.

  o Moved non-GUI-related statistical, graphics, and data management functions to the new RcmdrMisc package (suggestion of Liviu Andronic), which is loaded along with car package at Rcmdr startup.

  o Logical and character variables in the active data set are treated as if they were factors, which works OK for most purposes (following correspondence with Shannon McClintock).

  o Selection of fit indices added to the CFA dialog (suggestion of Tay Lee Yong).

  o Read Excel spreadsheet dialog asks about variable and row names (suggestion of Knut Krueger).
